{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 48,
  "lineage": "b9e8ab4f-529f-8333-433a-d6ad5038c39b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ce76ab37630bdfa",
            "domain": "vpc",
            "id": "eipalloc-08ce76ab37630bdfa",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-208-157-108.compute-1.amazonaws.com",
            "public_ip": "54.208.157.108",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-ec2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e076d5c9e040974",
            "arn": "arn:aws:ec2:us-east-1:177880501572:instance/i-0ae5115ec887ebd91",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae5115ec887ebd91",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d316db93ae5c7796",
            "private_dns": "ip-10-0-1-241.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.241",
            "public_ip": "34.239.152.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-085bc35a3c443d0a8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0dd183c816d85ace1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003852b9163a9f20b",
            "tags": {
              "Name": "sprints_private_ec2"
            },
            "tags_all": {
              "Name": "sprints_private_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dd183c816d85ace1"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "public-ec2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e076d5c9e040974",
            "arn": "arn:aws:ec2:us-east-1:177880501572:instance/i-049f5f271dd6189ea",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-049f5f271dd6189ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ced08b7a7b89fec8",
            "private_dns": "ip-10-0-0-161.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.161",
            "public_ip": "44.201.38.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-026901510b7f5c28c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0dd183c816d85ace1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a7dd1d795febe10",
            "tags": {
              "Name": "sprints_public_ec2"
            },
            "tags_all": {
              "Name": "sprints_public_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dd183c816d85ace1"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177880501572:internet-gateway/igw-0bceb7029acb355bc",
            "id": "igw-0bceb7029acb355bc",
            "owner_id": "177880501572",
            "tags": {
              "Name": "sprints-igw"
            },
            "tags_all": {
              "Name": "sprints-igw"
            },
            "vpc_id": "vpc-053ac3a35e9180c31"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ce76ab37630bdfa",
            "association_id": "eipassoc-0b6910e2aaf6834c5",
            "connectivity_type": "public",
            "id": "nat-00ff5ee43b1f3402f",
            "network_interface_id": "eni-013a1aff9d7f6f98d",
            "private_ip": "10.0.0.194",
            "public_ip": "54.208.157.108",
            "subnet_id": "subnet-06a7dd1d795febe10",
            "tags": {
              "Name": "sprints-NAT"
            },
            "tags_all": {
              "Name": "sprints-NAT"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177880501572:route-table/rtb-0503c6d3d2760431c",
            "id": "rtb-0503c6d3d2760431c",
            "owner_id": "177880501572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00ff5ee43b1f3402f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sprints-private-rt"
            },
            "tags_all": {
              "Name": "sprints-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-053ac3a35e9180c31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177880501572:route-table/rtb-0cf4059282d4190af",
            "id": "rtb-0cf4059282d4190af",
            "owner_id": "177880501572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bceb7029acb355bc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sprints-public-rt"
            },
            "tags_all": {
              "Name": "sprints-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-053ac3a35e9180c31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8a0ac760503daec",
            "route_table_id": "rtb-0503c6d3d2760431c",
            "subnet_id": "subnet-003852b9163a9f20b"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rt",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e27d36491607c47",
            "route_table_id": "rtb-0cf4059282d4190af",
            "subnet_id": "subnet-06a7dd1d795febe10"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177880501572:security-group/sg-0dd183c816d85ace1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd183c816d85ace1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230713101158872100000001",
            "name_prefix": "terraform-",
            "owner_id": "177880501572",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sprints_sg"
            },
            "tags_all": {
              "Name": "sprints_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-053ac3a35e9180c31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177880501572:subnet/subnet-003852b9163a9f20b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003852b9163a9f20b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "177880501572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-053ac3a35e9180c31"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177880501572:subnet/subnet-06a7dd1d795febe10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a7dd1d795febe10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "177880501572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-053ac3a35e9180c31"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177880501572:vpc/vpc-053ac3a35e9180c31",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07a61838b7483c84b",
            "default_route_table_id": "rtb-0fa526ea89f7a4be1",
            "default_security_group_id": "sg-0514effad7fd8c27a",
            "dhcp_options_id": "dopt-05a2a51190ef3e164",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-053ac3a35e9180c31",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fa526ea89f7a4be1",
            "owner_id": "177880501572",
            "tags": {
              "Name": "sprints-vpc"
            },
            "tags_all": {
              "Name": "sprints-vpc"
            }
          }
        }
      ]
    }
  ]
}